crates/swc/tests/tsc-references/classes/members/accessibility/privateStaticMemberAccessibility/input.ts/es2015.1.normal/output.js
class Base {
}
class Derived extends Base {
    constructor(...args){
        super(...args);
        this.bing // error
         = ()=>Base.foo
        ;
    }
}
Derived.bar = Base.foo;
